--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "Pasa password generator",
   "id": "jid1-2BU3qgaApUKrsQ",
   "icon": "data/icon-32.png",
-  "description": "Adds a toolbar button to generate secure passwords. The length of the generated password or the permissible characters (letters, numbers, symbols) can be changed to adapt to any web site's password requirements. Users are encouraged to use Firefox Sync to save generated passwords.",
+  "description": "Adds a toolbar button to generate secure passwords. Users are encouraged to save generated passwords in Firefox and back them up with Firefox Sync.",
   "author": "Alex Henrie",
   "license": "MPL 2.0",
   "version": "1.1"
